# actionengine

./: .gitmodules  AUTHORS  CMakeLists.txt  README.md  pyproject.toml
build_py/: __init__.py
builders/: Dockerfile  Dockerfile.dockerignore
examples/000-actions/: CMakeLists.txt  main.cc
examples/001-bidi-actions/: CMakeLists.txt  bidi_actions.cc
examples/003-python-speech-to-text/: run_server.py
examples/003-python-speech-to-text/stt/: model_server.py
examples/005-echo-server/: CMakeLists.txt  main.cc
examples/007-python-generative-media/: db_playground.py  launch_server.sh  playground.py
examples/007-python-generative-media/actions/: gemini_fc.py
examples/007-python-generative-media/actions/dbqa/: answer_question.py  answer_question_schema.py  answer_question_system_instructions.j2  describe_db.py  describe_db_schema.py  execute_query_schema.py  judge_result.py  judge_result_schema.py  judge_result_system_instructions.j2  logging.py  utils.py  validate_query.py  validate_query_schema.py  validate_query_system_instructions.j2
examples/007-python-generative-media/actions/dbqa/execute_query/: __init__.py  bigquery.py  sqlite.py
examples/007-python-generative-media/actions/deep_research/: deep_research.py
examples/007-python-generative-media/actions/memory/: api_utils.py  create_memory.py  create_memory_schema.py  data_types.py  get_schema.py  get_schema_schema.py  search.py  search_schema.py  search_schemas.py  search_schemas_schema.py  status.py  utils.py
examples/011-s2/: client.py  common.py  worker.py
examples/015-jb-storage/: common.py  consumer.py  producer.py
js/: main.ts  package-lock.json  package.json
js/__tests__/: vitest.config.ts
js/src/: action.ts  asyncNode.ts  chunkStore.ts  chunkStoreReader.ts  chunkStoreWriter.ts  data.ts  msgpack.ts  session.ts  status.ts  stream.ts  utils.ts  webrtcStream.ts  wsworker.ts
py/actionengine/: __init__.py  actions.py  async_node.py  chunk_store.py  cli.py  data.py  global_settings.py  logging.py  node_map.py  pydantic_helpers.py  redis.py  service.py  session.py  stream.py  utils.py  webrtc.py  websockets.py
py/actionengine/sdk/: interaction.py  llm_tool.py  llm_tool_runner.py
py/actionengine/sdk/anthropic/: client.py  generate_content_claude.py  generate_content_claude_handler.py
py/actionengine/sdk/google/: generate_content_gemini_handler.py
py/actionengine/sdk/llm/: __init__.py  generate_content_handler.py
py/actionengine/sdk/openai/: client.py  generate_content_openai.py  generate_content_openai_handler.py
py_tests/: test_action_basics.py  test_custom_connection_handler.py  test_data_ops.py  test_headers.py  test_reader_options.py  test_webrtc_stream.py  test_wire_message_buffering_behaviour.py
scripts/: build_python.sh  patch_rpath.sh
src/: CMakeLists.txt
src/actionengine/: actionengine_pybind11.cc
src/actionengine/actions/: CMakeLists.txt  action.cc  action.h  actions_pybind11.cc  registry.cc  registry.h  schema.cc  schema.h
src/actionengine/concurrency/: concurrency.h
src/actionengine/data/: CMakeLists.txt  data_pybind11.cc  msgpack.h  serialization.cc  types.cc  types.h
src/actionengine/distributed/: lru.cc  singleflight.cc
src/actionengine/net/: CMakeLists.txt  stream.cc  stream.h
src/actionengine/net/http/: CMakeLists.txt  websockets_pybind11.cc  websockets_pybind11.h  ws_common.cc  ws_common.h
src/actionengine/net/http/proxygen/: CMakeLists.txt  folly_utils.cc  folly_utils.h  http_connector.cc  http_connector.h  server.cc  server.h  wire_stream.cc  wire_stream.h  ws_client_stream.cc  ws_client_stream.h  ws_server_stream.cc  ws_server_stream.h  ws_server_stream_handler_factory.cc  ws_server_stream_handler_factory.h
src/actionengine/net/webrtc/: CMakeLists.txt  server.cc  server.h  signalling_client.cc  signalling_client.h  wire_stream.cc  wire_stream.h
src/actionengine/nodes/: async_node.cc  async_node.h  node_map.cc  node_map.h  nodes_pybind11.cc
src/actionengine/proto/: converters.cc
src/actionengine/redis/: chunk_store.cc  test_helpers.h  test_redis_basic.cc  test_redis_pubsub.cc  test_redis_scripts.cc  test_redis_streams.cc  test_redis_zrange.cc
src/actionengine/service/: CMakeLists.txt  service.cc  service.h  service_pybind11.h  session.cc  session.h
src/actionengine/stores/: byte_chunking.cc  byte_chunking.h  chunk_store_pybind11.cc  chunk_store_reader.cc  chunk_store_reader.h  chunk_store_writer.cc  local_chunk_store.cc  local_chunk_store.h  test_chunk_store.cc
src/actionengine/util/: CMakeLists.txt  telemetry.cc  telemetry.h  utils_pybind11.cc  utils_pybind11.h
src/thread/thread/: boost_primitives.cc  cases.h  channel.h  fiber.cc  fiber.h  thread_pool.cc  thread_pool.h  util.cc
web/: Dockerfile
web/app/: global.css  head.tsx  layout.tsx  page.tsx
web/app/bidi-blobs/: page.tsx
web/app/blob/: page.tsx
web/app/deepresearch/: page.tsx
web/app/echo/: page.tsx
web/app/gemini/: page.tsx
web/src/: index.d.ts
web/src/actions/: chat.ts  echo.ts  gui.ts
web/src/components/canvas/: Cursor.tsx  DrawingCanvas.tsx  Examples.tsx  Genmedia.tsx  Scene.tsx  View.tsx
web/src/components/dom/: Chat.module.css  Chat.tsx  Layout.tsx
web/src/helpers/: actionengine.tsx  codeStyle.css  demoChats.ts  global.ts  koota.tsx  traits.ts
web/src/helpers/components/: Three.tsx
web/src/helpers/genmedia/: primitives.ts  traits.ts
